--- a/css/style.css
+++ b/css/style.css
@@ -106,5 +106,5 @@ body {
 
 /* si se agrega un numero al campo de (solo Nombre) se le agrega esta clase */
 .is-invalid {
-    border: 1px solid red;
+    border-bottom: 1px solid red;
 }
