cambio de color del boton enviar a un tono mas claro

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@
     --inputBorder: #26262861;
     --inputColor: #fff;
     --placehoderColor: #737171;
+    --formularioBtn: #4451c5;
     --infoConfirm: #2d2d31;
     --infoBtnAccept: #3f4bb8;
     --infoBtnCancel: #f00;
