--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,13 @@
     --infoTextColor: #fff;
 }
 
+html {
+    height: 100%;
+
+}
+
 .body {
-    height: 100vh;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
