--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@
     --placehoderColor: #E4E4E4;
     --border-radius: 3px;
     --infoConfirm: #fff;
-    --infoBtnAccept: #ffff;
-    --infoBtnCancel: #ffff;
+    --infoBtnAccept: #3f4bb8;
+    --infoBtnCancel: #f00;
     --infoTextColor: #000;
 }
 
